syntax = "proto3";

package SignalR.Protobuf.Protocol;

message TestMessage {
	string data = 1;
}